tests/negative/test_expr_deref_ptr.orb
fnc main() {
    i32 x;
    ptr p = ptr(&x);
    *p;
}